# code_prac_hwsa2021

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.rst  environment.yml  press_schecter.py  pyproject.toml  setup.cfg  setup.py
code_prac/: __init__.py  press_schechter.py
notebooks/: Press-Schecter.ipynb
tests/: test_regressions.py
