[metadata]
name = code_prac
license = GPLv3
author = Simon Mutch
author_email = smutch@unimelb.edu.au
description = The code practical for the HWSA 2021
url = https://github.com/smutch/code_prac_hwsa2021
classifiers =
    Development Status :: 2 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    matplotlib>=1.5.1
    h5py>=2.5.0
    astropy>=1.1.1
    tqdm>=4.7.6
    scipy>=0.17.1
    seaborn>=0.9.0
    numba>=0.53.1
    click>=7.0

[options.extras_require]
dev =
    Sphinx>=2.3.1
    sphinx-rtd-theme>=0.4.3
    line_profiler>=3.3.0
