[metadata]
name = code_prac
license = GPLv3
author = Simon Mutch
author_email = smutch@unimelb.edu.au
description = The code practical for the HWSA 2021
url = https://github.com/smutch/code_prac_hwsa2021
classifiers =
    Development Status :: 2 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    matplotlib>=1.5.1
    scipy>=0.17.1
    numba>=0.53.1

[options.extras_require]
dev =
    Sphinx>=2.3.1
    sphinx-rtd-theme>=0.4.3
    line_profiler>=3.3.0
    black>=21.5b2
    isort>=5.9.1
    pytest>=6.2.4
    pytest-regtest>=1.3.2
    pre-commit>=2.13.0
    coverage>=5.5
